nodex-cli/tests/snapshots/behaviour__minimal__query_dependents_adr_beta.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "NOT_FOUND",
    "message": "missing node: id \"adr-beta\""
  },
  "ok": false
}
