nodex-cli/tests/snapshots/behaviour__minimal__query_issues.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "orphans": [
      {
        "created": null,
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      }
    ],
    "rule_coverage": [
      {
        "rule_id": "acyclic_relation",
        "subjects": 0,
        "unit": "edges",
        "unjudged": 0
      },
      {
        "rule_id": "cross_field",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_enum",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_parse",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "field_type",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "orphan",
        "subjects": 3,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "parse_failure",
        "subjects": 3,
        "unit": "files",
        "unjudged": 0
      },
      {
        "rule_id": "required_field",
        "subjects": 0,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "stale_review",
        "subjects": 2,
        "unit": "nodes",
        "unjudged": 0
      },
      {
        "rule_id": "superseded_reference",
        "subjects": 2,
        "unit": "edges",
        "unjudged": 0
      }
    ],
    "skipped_rules": [],
    "stale": [],
    "summary": {
      "by_category": {
        "excluded_target": 1,
        "violation_orphan": 1
      },
      "total": 1
    },
    "unresolved_edges": [
      {
        "cause": "excluded_from_scope",
        "location": "frontmatter:covers",
        "policy_name": "excluded_target",
        "raw_target": "nodex.toml",
        "reason": "target exists on disk but is excluded from scope",
        "relation": "covers",
        "severity": "info",
        "source": "guide-overview",
        "source_path": "docs/overview.md"
      }
    ],
    "violations": [
      {
        "details": {
          "type": "orphan"
        },
        "message": "no document references this one; link it, set `orphan_ok: true`, or add its kind to [detection].orphan_ok_kinds",
        "node_id": "generic-legacy",
        "path": "docs/legacy.md",
        "rule_id": "orphan",
        "severity": "warning"
      }
    ]
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
