nodex-cli/tests/snapshots/behaviour__minimal__query_neighborhood_guide_index.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "NOT_FOUND",
    "message": "missing node: id \"guide-index\""
  },
  "ok": false
}
