nodex-cli/tests/snapshots/behaviour__minimal__query_node_no_such_id.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "NOT_FOUND",
    "message": "missing node: id \"no-such-id\""
  },
  "ok": false
}
