nodex-cli/tests/snapshots/behaviour__minimal__query_nodes.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "id": "adr-storage",
        "kind": "adr",
        "path": "docs/decisions/storage.md",
        "status": "active",
        "title": "Storage"
      },
      {
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      },
      {
        "id": "guide-overview",
        "kind": "guide",
        "path": "docs/overview.md",
        "status": "active",
        "title": "Overview"
      }
    ],
    "total": 3
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
