nodex-cli/tests/snapshots/behaviour__minimal__query_orphans.snap
---
source: nodex-cli/tests/behaviour.rs
expression: observed
---
exit: 0
{
  "data": {
    "items": [
      {
        "created": null,
        "id": "generic-legacy",
        "kind": "generic",
        "path": "docs/legacy.md",
        "status": "active",
        "title": "Legacy note"
      }
    ],
    "total": 1
  },
  "ok": true,
  "snapshot": {
    "unbuildable": 0,
    "unfollowed": 0,
    "verification": "membership"
  }
}
