nodex-cli/tests/snapshots/behaviour__minimal__query_recent.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 0
{
  "data": {
    "items": [],
    "total": 0
  },
  "ok": true
}
