nodex-cli/tests/snapshots/behaviour__minimal__query_trust.snap
---
source: nodex-cli/tests/behaviour.rs
expression: "observe(dir.path(), argv)"
---
exit: 2
{
  "error": {
    "code": "INVALID_ARGUMENT",
    "message": "error: the following required arguments were not provided:\n  <ID|--bottom <BOTTOM>|--top <TOP>>\n\nUsage: nodex query trust <ID|--bottom <BOTTOM>|--top <TOP>>\n\nFor more information, try '--help'.\n"
  },
  "ok": false
}
